fix: more config fixes